<resources>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="app_name">爱南明</string>

    <string name="title_home">首页</string>
    <string name="title_workbench">工作台</string>
    <string name="title_message">消息</string>
    <string name="title_me">我的</string>

    <string name="confirm">确认</string>
    <string name="log_in">登录</string>
    <string name="log_up">注册</string>
    <string name="log_out">退出</string>
    <string name="quick_login">快捷登录</string>
    <string name="phone_num">手机号</string>
    <string name="set_password">设置密码</string>
    <string name="password">密码</string>
    <string name="verification_code">验证码</string>
    <string name="please_enter_phone_number">请输入手机号</string>
    <string name="please_enter_verification_code">请输入验证码</string>
    <string name="please_enter_password">请输入密码</string>
    <string name="send_verification_code">发送验证码</string>
    <string name="password_login">密码登录</string>
    <string name="forget_password">忘记密码?</string>
    <string name="verification_code_login">验证码登录</string>
    <string name="code_error">验证码错误。</string>


    <string name="search">搜索</string>
    <string name="scan">扫描</string>
    <string name="photo_albums">相册</string>

    <string name="pending_tasks">待办任务</string>
    <string name="overdue">已逾期</string>
    <string name="completed">已完成</string>
    <string name="all">全部</string>
    <string name="headline_list">头条列表</string>
    <string name="nanming_headline">南明头条</string>
    <string name="unit_headline">单位头条</string>
    <string name="create_task">创建任务</string>
    <string name="task_set">任务设置</string>
    <string name="social_worker_rob_order">社工抢单</string>
    <string name="intelligence_send_order">智能派单</string>
    <string name="artificial_send_order">人工派单</string>
    <string name="applicant">申请人</string>
    <string name="contact_number">联系电话</string>
    <string name="residential_address">居住地址</string>
    <string name="visit_time">上门时间</string>
    <string name="task_content">任务内容</string>
    <string name="allot_grid_personnel">分配网格员</string>
    <string name="remark">备注</string>

    <string name="please_fill_in_applicant">请填写申请人</string>
    <string name="please_fill_in_contact_number">请填写联系电话</string>
    <string name="please_fill_in_residential_address">请填写居住地址</string>
    <string name="please_fill_in_visit_time">请填写上门时间</string>
    <string name="please_fill_in_remark">请填写备注</string>

    <string name="government_affairs">政务办理</string>
    <string name="government_affairs_office">政务办事</string>
    <string name="government_affairs_public">政务公开</string>
    <string name="government_affairs_booking">政务预约</string>
    <string name="booking_info">预约信息</string>
    <string name="please_lselect_time">请选择时间</string>
    <string name="please_lselect">请选择</string>
    <string name="system_messages">系统消息</string>

    <string name="collect">收藏</string>
    <string name="integral">积分</string>
    <string name="real_name_authentication">实名认证</string>
    <string name="my_license">我的证照</string>
    <string name="my_integral">我的积分</string>
    <string name="my_transaction">我的办理</string>
    <string name="my_book">我的预约</string>
    <string name="my_order">我的订单</string>
    <string name="help_feedback">帮助反馈</string>
    <string name="about_us">关于我们</string>
    <string name="setting">设置</string>
    <string name="save">保存</string>
    <string name="portrait">头像</string>
    <string name="nickname">昵称</string>
    <string name="mine_signature">个性签名</string>
    <string name="phone_number">手机号码</string>
    <string name="mine_company">我的单位</string>
    <string name="mine_address">我的地址</string>
    <string name="mine_edit_title">编辑个人资料</string>
    <string name="setting_password">设置密码</string>
    <string name="setting_login_out">退出登录</string>
    <string name="setting_alter_phone_number">更换手机号</string>
    <string name="setting_alter_password_length">密码至少8个字符且包含数字和字母</string>
    <string name="setting_old_password">旧密码</string>
    <string name="setting_new_password">新密码</string>
    <string name="setting_new_password_confirm">确认新密码</string>
    <string name="please_enter_old_password">请输入旧密码</string>
    <string name="please_enter_new_password">请输入新密码</string>
    <string name="please_enter_new_password_again">请再次输入新密码</string>
    <string name="setting_finish">完成</string>
    <string name="setting_forget_old_password">忘记旧密码？</string>
    <string name="setting_alter_by_phone_num">通过手机号验证修改</string>
    <string name="setting_unable_to_receive_captcha">无法接收验证码？</string>
    <string name="setting_alter_by_old_password">通过旧密码修改</string>
    <string name="setting_alter_phone_text">更换后下次登录可使用新手机号登录。</string>
    <string name="setting_confirm_alter_phone">确认更换</string>
    <string name="mine_address_detail">贵州省 贵阳市 南民区 花果园3302</string>
    <string name="mine_default_address">默认地址</string>
    <string name="add">新增</string>
    <string name="name">姓名</string>
    <string name="sex">性别</string>
    <string name="nation">民族</string>
    <string name="birthday">出生年月</string>
    <string name="address">住址</string>
    <string name="please_enter_name">请输入姓名</string>
    <string name="idcard">身份证</string>
    <string name="please_enter_idcard">请输入身份证号码</string>
    <string name="district">所在地区</string>
    <string name="please_enter_district">请输入所在地区</string>
    <string name="mine_district">贵州省 贵阳市 南明区</string>
    <string name="building">所在楼栋</string>
    <string name="house_number">门牌号</string>
    <string name="add_address">添加地址</string>
    <string name="edit_address">编辑地址</string>
    <string name="version_code">V1.0.0</string>
    <string name="copyright">Copyright © 2018 华电南自（贵州）科技有限公司</string>
    <string name="camera_tip">请确保所有数据清晰可读，避免出现反光，不模糊。</string>
    <string name="camera_face">拍摄正面</string>
    <string name="camera_reverse">拍摄反面</string>
    <string name="camera_hand_idcard_face">拍摄手持身份证照</string>
    <string name="authentication_normal_tip">进行实名认证办理业务更快捷</string>
    <string name="pass_alipay_authentication">通过支付宝认证</string>
    <string name="pass_idcard_authentication">通过身份证认证</string>
    <string name="authentication_check">正在审核，预计通过时间30分钟</string>
    <string name="pass_authentication">已通过认证</string>
    <string name="re_authentication">重新认证</string>
    <string name="ali_real_authentication">支付宝实名认证</string>
    <string name="idcard_real_authentication">身份证实名认证</string>
    <string name="load_fail">加载失败</string>
    <string name="refresh_page">别紧张，试试看刷新页面</string>
    <string name="refresh">刷新</string>
    <string name="camera">拍照或录像</string>
    <string name="pick_photo">选择现有的</string>
    <string name="cancel">取消</string>
    <string name="unauthorized">未认证</string>
    <string name="authenticated">已认证</string>
    <string name="edit">编辑</string>
    <string name="upload_couple_photo">上传夫妇双方合影照</string>
    <string name="upload_couple_license_photo">上传夫妇双方身份证证照</string>
    <string name="upload_student_license_photo">上传学生证证照</string>
    <string name="upload_household_license_photo">上传户口本照片</string>
    <string name="upload_inch_license_photo">上传免冠1寸照片</string>
    <string name="upload_marriage_license_photo">上传结婚证照片</string>
    <string name="upload_register_license_photo">上传登记表照片</string>
    <string name="camera_man_idcard_photo_face">拍摄男方身份证正面</string>
    <string name="camera_man_idcard_photo_reverse">拍摄男方身份证反面</string>
    <string name="camera_woman_idcard_photo_face">拍摄女方身份证正面</string>
    <string name="camera_woman_idcard_photo_reverse">拍摄女方身份证反面</string>
    <string name="camera_personal_info_page">拍摄个人信息页面</string>
    <string name="empty_data">暂无数据</string>
    <string name="datetime">11月18日 12:32</string>
    <string name="social_security_card">社会保障卡</string>
    <string name="waiting_check">等待审核</string>
    <string name="finishing_check">办理完成</string>
    <string name="fail_check">审核失败</string>
    <string name="cancel_order">取消订单</string>
    <string name="transaction_applicant">申请人：</string>
    <string name="transaction_handle">办理方式：</string>
    <string name="transaction_status">办理状态：</string>
    <string name="transaction_remark">备注：</string>
    <string name="view_details">查看详情</string>
    <string name="progress_details">办理进度详情</string>
    <string name="grid_personnel">网格员</string>
    <string name="evaluation_service">评价服务</string>
    <string name="community_grid">沙南社区-33网格</string>
    <string name="prove_type">公共服务  即办件</string>
    <string name="add_image">添加图片</string>
    <string name="submit_comment">提交评价</string>
    <string name="submit">提交</string>
    <string name="error_gif">x or y bound size should be at least %1$dpx and file size should be no more than %2$sM</string>
    <string name="please_input_comment">请输入评价内容</string>
    <string name="managed_object">办理对象</string>
    <string name="base_info">男  42岁  绿苑-31网格</string>
    <string name="id_card_number">520401199004231234</string>
    <string name="managed_person">办理人</string>
    <string name="managed_grid_person">沙南社区网格员-李鑫荣</string>
    <string name="contact_with_him">联系他</string>
    <string name="cut_off_date">截止日期</string>
    <string name="cut_off_date_text">08-08 12:00 截止</string>
    <string name="application_material">申请材料</string>
    <string name="integral_store">积分商城</string>
    <string name="be_under_construction">建设中</string>
    <string name="task_integral">任务积分</string>
    <string name="manage_social_security_card">办理社会保障卡</string>
    <string name="add_score">+ 100</string>
    <string name="book_tip">预约办理、合理安排时间</string>
    <string name="not_take_num">未取号</string>
    <string name="yet_take_num">已取号</string>
    <string name="lose_efficacy_num">已过号</string>
    <string name="tack_num_text">取  号  码：</string>
    <string name="book_time_text">预约时间：</string>
    <string name="line_up_text">排队人数：</string>
    <string name="line_up">5人</string>
    <string name="book_cancel">取消预约</string>
    <string name="expired">已失效</string>
    <string name="product_name">一个烧烤店-买单8.8折</string>
    <string name="pay">付款</string>
    <string name="obligation">待付款</string>
    <string name="evaluate">评价</string>
    <string name="share_to">分享到</string>
    <string name="wechat_name">微信</string>
    <string name="start_transact">开始办理</string>
    <string name="war_ommander">任务攻略</string>
    <string name="no_accept_reason">不予受理原因</string>
    <string name="please_enter_reason">请输入原因</string>
</resources>
