<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rl_error_page"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="@dimen/dp_80"
            android:layout_height="@dimen/dp_80"
            android:src="@drawable/load_error" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/load_fail"
            android:textColor="@color/me_text_color" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_5"
            android:text="@string/refresh_page"
            android:textColor="@color/gray" />

        <Button
            android:id="@+id/btn_refresh"
            android:layout_width="@dimen/dp_120"
            android:layout_height="@dimen/dp_40"
            android:layout_marginTop="@dimen/dp_12"
            android:background="@drawable/btn_save_shape_selector"
            android:text="@string/refresh"
            android:textColor="@color/btn_save_selector" />
    </LinearLayout>
</RelativeLayout>