<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom|center_horizontal"
    android:background="@drawable/pop_window_shape"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp_10"
        android:gravity="center_horizontal"
        android:padding="@dimen/dp_10"
        android:text="@string/no_accept_reason"
        android:textColor="@color/colorTextTitle"
        android:textSize="@dimen/sp_14" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/dp_15"
        android:background="@drawable/edit_bg"
        android:lines="6"
        android:gravity="top|left"
        android:textSize="@dimen/sp_16"
        android:textColor="@color/colorTextTitle"
        android:hint="@string/please_enter_reason"
        android:padding="@dimen/dp_15" />

    <Button
        android:id="@+id/btn_confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_15"
        android:background="@drawable/button_bg"
        android:gravity="center"
        android:text="@string/confirm"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_16" />
</LinearLayout>
