<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <!-- 办理人 -->
    <TextView
        android:id="@+id/tv_managed_person"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_16"
        android:text="@string/managed_person"
        android:textColor="@color/me_text_color"
        android:textSize="@dimen/sp_18"
        android:textStyle="bold" />

    <!-- 办理人内容栏 -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_24"
        android:layout_below="@+id/tv_managed_person"
        android:layout_margin="@dimen/dp_16">

        <TextView
            android:id="@+id/tv_managed_grid_person"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/managed_grid_person"
            android:textColor="@color/me_text_phone"
            android:textSize="@dimen/sp_16" />

        <Button
            android:id="@+id/btn_contact_with_him"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dp_20"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@android:color/transparent"
            android:text="@string/contact_with_him"
            android:textColor="@color/btn_save_selector" />
    </RelativeLayout>
</RelativeLayout>