<?xml version="1.0" encoding="utf-8"?>
<!-- 办理状态栏及其办理证明类型和名称 -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <!-- 办理状态 -->
    <RelativeLayout
        android:id="@+id/rl_status_cont"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:background="@color/me_text_color">

        <TextView
            android:id="@+id/tv_transaction_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/dp_16"
            android:text="@string/transaction_status"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_16"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_cancel_order"
            android:layout_width="@dimen/dp_80"
            android:layout_height="@dimen/dp_36"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/dp_16"
            android:background="@drawable/btn_save_shape_selector"
            android:text="@string/cancel_order"
            android:textColor="@color/btn_save_selector"
            android:textSize="@dimen/sp_14" />
    </RelativeLayout>

    <!-- 办理证明类型和名称 -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_60"
        android:layout_below="@+id/rl_status_cont"
        android:layout_marginTop="@dimen/dp_16"
        android:layout_marginBottom="@dimen/dp_16"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/tv_matter_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_16"
            android:text="@string/social_security_card"
            android:textColor="@color/me_text_color"
            android:textSize="@dimen/sp_18"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_prove_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_matter_name"
            android:layout_marginLeft="@dimen/dp_16"
            android:layout_marginTop="@dimen/dp_4"
            android:text="@string/prove_type"
            android:textColor="@color/me_text_phone" />
    </RelativeLayout>
</RelativeLayout>