<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- 标题栏 -->
    <include
        layout="@layout/app_toolbar"/>

    
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="@dimen/dp_170"
            android:layout_height="@dimen/dp_90"
            android:src="@mipmap/ic_logo"/>

        <TextView
            android:id="@+id/tv_app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:layout_below="@+id/iv_logo"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/dp_8"
            android:textColor="@color/me_text_color"
            android:textSize="@dimen/sp_16"/>

        <TextView
            android:id="@+id/tv_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/version_code"
            android:layout_below="@+id/tv_app_name"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/dp_5"
            android:textColor="@color/me_text_phone"
            android:textSize="@dimen/sp_14"/>
    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/copyright"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dp_26"
        android:textColor="@color/me_text_color"
        android:textSize="@dimen/sp_12"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/dp_16"/>
</RelativeLayout>
